--- a/grid-helper/style.css
+++ b/grid-helper/style.css
@@ -1,3 +1,8 @@
+html {
+    font-family: Arial, sans-serif;
+    background-color: #222222;
+}
+
 #grid-helper {
   background: #1f1f1f;
   color: #e6e6e6;
