--- a/grid-helper/style.css
+++ b/grid-helper/style.css
@@ -3,6 +3,11 @@ html {
     background-color: #222222;
 }
 
+body {
+  font-family: Arial, sans-serif;
+  background-color: #222222;
+}
+
 #grid-helper {
   background: #1f1f1f;
   color: #e6e6e6;
